# llm-caption

./: .env.example  .gitignore  README.md  pyproject.toml
sample/: _report_.csv  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt
scripts/: __init__.py  caption.py  config.py  ignore_tags.py  llm_caption.py  tagger.py
